<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_primary"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.login.SignUpFragment">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.1" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.9" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/smallLogo"
            android:layout_width="@dimen/default_image_size_64dp"
            android:layout_height="@dimen/default_image_size_64dp"
            android:layout_marginTop="@dimen/margin_40"
            android:src="@drawable/small_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/MainTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_24"
            android:text="@string/createAccount"
            android:textAlignment="center"
            android:textColor="@color/color_black"
            android:textSize="@dimen/font_28"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@+id/smallLogo" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/secondText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_8"
            android:text="@string/Personalizehome"
            android:textAlignment="center"
            android:textColor="@color/color_gray_text"
            android:textSize="@dimen/font_16"
            app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@+id/MainTitle" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/EnterName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_32"
            android:backgroundTint="@color/color_black"
            android:hint="@string/Name"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:textColor="@color/color_black"
            android:textColorHint="@color/color_gray_text"
            app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@+id/secondText" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/EnterEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16"
            android:backgroundTint="@color/color_black"
            android:hint="@string/Email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:textColor="@color/color_black"
            android:textColorHint="@color/color_gray_text"
            app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@+id/EnterName" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/EnterPassward"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16"
            android:backgroundTint="@color/color_black"
            android:hint="@string/Password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColor="@color/color_black"
            android:textColorHint="@color/color_gray_text"
            app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@+id/EnterEmail" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/EnterComPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16"
            android:backgroundTint="@color/color_black"
            android:hint="@string/ComPassword"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColor="@color/color_black"
            android:textColorHint="@color/color_gray_text"
            app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@+id/EnterPassward" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/SignupButton"
            android:layout_width="0dp"
            android:layout_height="@dimen/default_button_height"
            android:layout_marginTop="@dimen/margin_32"
            android:background="@drawable/button_rounded"
            android:text="@string/SignupButton"
            android:textSize="@dimen/font_18"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@+id/EnterComPassword" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_24"
            android:layout_marginBottom="@dimen/margin_24"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/SignupButton"
            app:layout_constraintVertical_bias="0.0">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_login"
                android:textColor="@color/color_black"
                android:textSize="@dimen/font_14" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/buttonLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_4"
                android:text="@string/LoginButton"
                android:textColor="@color/color_tab_active"
                android:textStyle="bold"
                android:textSize="@dimen/font_14" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>