<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_primary"
    tools:context=".ui.base.onBoardingActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="@dimen/default_image_size_64dp"
        android:layout_height="@dimen/default_image_size_54dp"
        android:layout_marginStart="@dimen/margin_40"
        android:layout_marginTop="@dimen/margin_36"
        android:src="@drawable/small_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </androidx.appcompat.widget.AppCompatImageView>


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_40"
        android:layout_marginEnd="@dimen/margin_40"
        android:layout_marginTop="@dimen/margin_36"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/color_black"
        android:textSize="@dimen/font_44"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent">

    </androidx.appcompat.widget.AppCompatTextView>


    <androidx.appcompat.widget.AppCompatTextView

        android:id="@+id/PersonalizeText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_32"
        android:layout_marginEnd="@dimen/margin_32"
        android:layout_marginTop="@dimen/margin_32"
        android:layout_marginBottom="@dimen/margin_32"
        android:ellipsize="end"
        android:maxLines="2"
        android:text="@string/Personalize"
        android:textAlignment="center"
        android:textColor="@color/color_black"
        android:textSize="@dimen/font_36"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/Title">

    </androidx.appcompat.widget.AppCompatTextView>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/sofaImage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:src="@drawable/onboardinglogo"
        android:adjustViewBounds="true"
        android:maxWidth="@dimen/default_image_size_409dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PersonalizeText">

    </androidx.appcompat.widget.AppCompatImageView>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/hometext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_10"
        android:layout_marginTop="@dimen/margin_36"
        android:text="@string/Personalizehome"
        android:textAlignment="center"
        android:textColor="@color/color_dark_gray"
        android:textSize="@dimen/font_25"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/sofaImage">

    </androidx.appcompat.widget.AppCompatTextView>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/subbottomtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_56"
        android:layout_marginEnd="@dimen/margin_56"
        android:layout_marginTop="@dimen/margin_6"
        android:maxLines="1"
        android:paddingStart="@dimen/padding_28"
        android:text="@string/subbottomtitle"
        android:textAlignment="center"
        android:textColor="@color/color_dark_gray"
        android:textSize="@dimen/font_16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hometext">

    </androidx.appcompat.widget.AppCompatTextView>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/getstartButton"
        android:layout_width="match_parent"
        android:layout_height="@dimen/default_button_height"
        android:layout_marginStart="@dimen/margin_25"
        android:layout_marginTop="@dimen/margin_64"
        android:layout_marginEnd="@dimen/margin_25"
        android:background="@drawable/button_rounded"
        android:text="@string/bottomText"
        android:textSize="@dimen/font_20"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/subbottomtitle">

    </androidx.appcompat.widget.AppCompatButton>


</androidx.constraintlayout.widget.ConstraintLayout>