<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_primary"
    android:fillViewport="true"
    tools:context=".ui.login.ForgotPasswordFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin_24">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/btnBack"
            android:layout_width="@dimen/margin_48"
            android:layout_height="@dimen/margin_48"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:padding="@dimen/margin_12"
            android:src="@drawable/ic_back"
            android:adjustViewBounds="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivLogo"
            android:layout_width="@dimen/default_image_size_96dp"
            android:layout_height="@dimen/default_image_size_96dp"
            android:layout_marginTop="@dimen/margin_48"
            android:src="@drawable/small_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnBack" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_24"
            android:text="@string/forgot_password_title"
            android:textColor="@color/color_black"
            android:textSize="@dimen/font_28"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivLogo" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvSubtitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16"
            android:gravity="center"
            android:text="@string/forgot_password_subtitle"
            android:textColor="@color/color_gray_text"
            android:textSize="@dimen/font_16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTitle" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilEmail"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_32"
            android:hint="@string/hint_enter_email"
            app:errorEnabled="true"
            app:boxStrokeColor="@color/color_black"
            app:hintTextColor="@color/color_black"
            app:layout_constraintTop_toBottomOf="@id/tvSubtitle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:textColor="@color/color_black" />

        </com.google.android.material.textfield.TextInputLayout>

        <FrameLayout
            android:id="@+id/btnContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_24"
            app:layout_constraintTop_toBottomOf="@id/tilEmail">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnSendResetLink"
                android:layout_width="match_parent"
                android:layout_height="@dimen/default_button"
                android:background="@drawable/button_rounded"
                android:text="@string/btn_send_reset_link"
                android:textAllCaps="false"
                android:textColor="@color/color_white"
                android:textSize="@dimen/font_18"
                android:textStyle="bold" />

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="@dimen/margin_24"
                android:layout_height="@dimen/margin_24"
                android:layout_gravity="center"
                android:indeterminateTint="@color/color_white"
                android:visibility="gone" />

        </FrameLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvBackToLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_24"
            android:layout_marginBottom="@dimen/margin_24"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:padding="@dimen/margin_8"
            android:text="@string/back_to_login"
            android:textColor="@color/color_black"
            android:textSize="@dimen/font_16"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnContainer"
            app:layout_constraintVertical_bias="1.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>
